--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
 		"bits-ui": "^0.21.13",
 		"clsx": "^2.1.1",
 		"lucide-svelte": "^0.424.0",
+		"mode-watcher": "^0.4.1",
 		"svelte-radix": "^1.1.1",
+		"svelte-sonner": "^0.3.27",
 		"tailwind-merge": "^2.4.0",
 		"tailwind-variants": "^0.2.1"
 	}
